k8s-manifests/overlays/dev/deployment-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app-deployment
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: backend-app-container
