k8s-manifests/overlays/dev/ingress-patch.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-app-ingress
  annotations:
    # Dev용 그룹 이름 (ALB 하나를 여러 Ingress가 공유하려면 그룹 설정 필요, 여기선 분리)
    alb.ingress.kubernetes.io/group.name: backend-dev
spec:
  rules:
  - host: dev-api.fall-in-jeju.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-app-service
            port:
              number: 80
